@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Robots
 _Comment=Avoid the robots and make them crash into each other
 Exec=gnobots2
-Icon=gnome-gnobots2.svg
+Icon=gnome-gnobots2
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Game;ArcadeGame;
