@@ -1,3 +1,12 @@
+2006-03-31  Callum McKenzie  <callum@spooky-possum.org>
+
+	* menu.c (about_cb): Add the icon to the about dialog properties.
+
+	* gnobots2.desktop.in: 
+	* gnobots.c: 
+	* Makefile.am: Install both png and svg icons into the icon theme
+	and set the icon by name.
+
 2006-03-28  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gnobots.c: Patch from Thomas Thurman to upgrade popt to
